# FlowTracker

./: .buildinfo  .gitignore  README.md  arquitectura.html  concepts.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  tree.txt
_sources/: arquitectura.rst.txt  concepts.rst.txt
_sources/developer_guide/design/: sequence.rst.txt
architecture/: casos_uso.html  secuencias.html
dev/: flowtracker.py
dev/core/entities/: CuentaContable.py
dev/domain/: PlanContable.py
dev/persistence/: FileServ.py  PersistenceManager.py
dev/presentation/: CLI.py  Controller.py
dev/view/: CLI.py
developer_guide/: intro&structure.html
developer_guide/design/: sequence.html  use_cases.html
doc/: defs&concepts.md  fileDataFormats&Flow.md  fileFormats.md  flowTrackerDoc.md
doc/dev/: DocsUML.md
doc/dev/diagrams/: .$DiagramaClases.drawio.bkp  DiagramaCasosUso.drawio  DiagramaClases.drawio
doc/diagrams/: B1_sequence.drawio
doc/source/: conf.py  index.rst
doc/source/developer_guide/: intro&structure.rst
doc/source/developer_guide/design/: use_cases.rst
old_doc/: defs&concepts.md
old_doc/dev/: DocsUML.md
old_doc/dev/diagrams/: .$DiagramaCasosUso.drawio.bkp  DiagramaCasosUso.drawio
old_doc/dev/diagrams/sequence/: .$crear_ejercicios.drawio.bkp  crear_ejercicios.drawio
src/flowtracker/: __init__.py  __main__.py
src/flowtracker/core/: __init__.py
src/flowtracker/core/account/: __init__.py  actions.py  models.py
src/flowtracker/data/: __init__.py  manager.py  utils.py
src/flowtracker/ui/: controller.py
(+6 files in other folders)
